--- a/packages/file-share/frontend/package.json
+++ b/packages/file-share/frontend/package.json
@@ -40,7 +40,8 @@
         "@vitejs/plugin-react": "^4",
         "typescript": "^5.6.3",
         "vite": "^6.0.6",
-        "tailwindcss": "^3.4.13",
+        "tailwindcss": "^4.0.14",
+        "@tailwindcss/postcss": "^4.0.14",
         "postcss": "^8.4.47",
         "autoprefixer": "^10.4.20",
         "@peerbit/vite": "^1"
