--- a/packages/social-media-app/frontend/package.json
+++ b/packages/social-media-app/frontend/package.json
@@ -38,8 +38,8 @@
         "@types/react-dom": "^18.2.18",
         "@vitejs/plugin-react": "^4",
         "autoprefixer": "^10.4.20",
-        "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
+        "tailwindcss": "^4.0.14",
+        "@tailwindcss/vite": "^4.0.14",
         "typescript": "^5.6.3",
         "vite": "^6.0.6"
     },
