--- a/packages/social-media-app/app-sdk/package.json
+++ b/packages/social-media-app/app-sdk/package.json
@@ -1,14 +1,13 @@
 {
-    "name": "@dao-xyz/app-sdk",
-    "version": "0.0.5",
+    "name": "@giga-app/sdk",
+    "version": "0.0.1",
     "homepage": "https://dao-xyz.github.io/peerbit-examples",
     "module": "lib/esm/index.js",
     "types": "lib/esm/index.d.ts",
     "exports": {
         ".": {
             "import": "./lib/esm/index.js"
-        },
-        "./package.json": "./package.json"
+        }
     },
     "files": [
         "lib",
@@ -22,29 +21,17 @@
         "react": "*"
     },
     "dependencies": {
-        "@chainsafe/libp2p-yamux": "^7",
-        "@emotion/react": "^11.11.3",
-        "@emotion/styled": "^11.11.0",
-        "@mui/icons-material": "^5.15.7",
-        "@mui/material": "^5.15.7",
         "@peerbit/proxy-window": "^3",
         "@types/react": "^18.0.25",
         "@types/react-dom": "^18.2.18",
-        "path-browserify": "^1.0.1",
         "peerbit": "^4",
+        "@peerbit/react": "^0.0.13",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.27.0",
         "react-use": "^17.4.0"
     },
-    "devDependencies": {
-        "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
-        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@babel/plugin-transform-typescript": "^7.20.2",
-        "@types/sinon": "^17.0.2",
-        "node-localstorage": "^2.2.1",
-        "sinon": "^17.0.1"
-    },
+    "devDependencies": {},
     "scripts": {
         "clean": "shx rm -rf lib/*",
         "build": "yarn clean && tsc -p tsconfig.json",
