--- a/packages/social-media-app/frontend/package.json
+++ b/packages/social-media-app/frontend/package.json
@@ -14,7 +14,8 @@
         "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist"
     },
     "dependencies": {
-        "@dao-xyz/app-service": "^0",
+        "@giga-app/app-service": "^0",
+        "@giga-app/sdk": "^0",
         "@dao-xyz/social": "^0",
         "@headlessui/react": "^2.2.0",
         "@peerbit/peer-names": "^0.0.1",
