--- a/packages/social-media-app/app-service/package.json
+++ b/packages/social-media-app/app-service/package.json
@@ -32,6 +32,7 @@
     },
     "devDependencies": {
         "@peerbit/test-utils": "^2",
+        "@dao-xyz/social": "^0",
         "typescript": "^5.6.3"
     },
     "dependencies": {
