--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,5 +59,5 @@ jobs:
 
     - name: Chess app
       run: |
-        aws s3 sync ./packages/social-media-app/frontend/dist/ s3://chess-dao-xyz-dist --delete
-        aws cloudfront create-invalidation --distribution-id E39RSPI7MIQNW2 --paths '/*';
+        aws s3 sync ./packages/chess/frontend/dist/ s3://chess-dao-xyz-dist --delete
+        aws cloudfront create-invalidation --distribution-id ERBVN30JQDG5W --paths '/*';
