--- a/packages/social-media-app/frontend/package.json
+++ b/packages/social-media-app/frontend/package.json
@@ -23,6 +23,7 @@
         "@radix-ui/react-toggle": "^1.0.3",
         "axios": "^1.4.0",
         "lodash.debounce": "^4.0.8",
+        "lodash.throttle": "^4.1.1",
         "mdast-util-from-markdown": "^2.0.2",
         "mdast-util-to-string": "^4.0.0",
         "peerbit": "^4",
@@ -40,6 +41,7 @@
         "@tailwindcss/vite": "^4.0.14",
         "@types/lodash": "^4.17.16",
         "@types/lodash.debounce": "^4.0.9",
+        "@types/lodash.throttle": "^4.1.9",
         "@types/react": "^18.2.46",
         "@types/react-dom": "^18.2.18",
         "@vitejs/plugin-react": "^4",
