--- a/packages/social-media-app/ai/cli/package.json
+++ b/packages/social-media-app/ai/cli/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@peerbit/llm-service-cli",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "author": "dao.xyz",
     "repository": "https://github.com/@dao-xyz/peerbit-examples",
     "license": "Apache-2.0",
@@ -40,9 +40,9 @@
         "typescript": "^5.6.3"
     },
     "dependencies": {
+        "@giga-app/llm": "^0.0.2",
         "@inquirer/editor": "^2",
         "@inquirer/input": "^2",
-        "@inquirer/select": "^2",
-        "@giga-app/llm": "^0"
+        "@inquirer/select": "^2"
     }
 }
