--- a/packages/social-media-app/app-sdk/package.json
+++ b/packages/social-media-app/app-sdk/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@giga-app/sdk",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "homepage": "https://dao-xyz.github.io/peerbit-examples",
     "module": "lib/esm/index.js",
     "types": "lib/esm/index.d.ts",
@@ -21,19 +21,18 @@
         "react": "*"
     },
     "dependencies": {
+        "@iframe-resizer/child": "^5",
+        "@iframe-resizer/parent": "^5",
         "@peerbit/proxy-window": "^3",
+        "@peerbit/react": "^0.0.14",
         "@types/react": "^18.0.25",
         "@types/react-dom": "^18.2.18",
         "peerbit": "^4",
-        "@peerbit/react": "^0.0.13",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.27.0",
-        "react-use": "^17.4.0",
-        "@iframe-resizer/parent": "^5",
-        "@iframe-resizer/child": "^5"
+        "react-use": "^17.4.0"
     },
-    "devDependencies": {},
     "scripts": {
         "clean": "shx rm -rf lib/*",
         "build": "yarn clean && tsc -p tsconfig.json",
