--- a/packages/social-media-app/ai/cli/package.json
+++ b/packages/social-media-app/ai/cli/package.json
@@ -30,8 +30,7 @@
     },
     "scripts": {
         "clean": "shx rm -rf lib/*",
-        "build": "yarn clean && tsc -p tsconfig.json && yarn cp-images",
-        "cp-images": "shx cp -r ./resources ./lib/esm/",
+        "build": "yarn clean && tsc -p tsconfig.json",
         "test": "mocha",
         "watch": "nodemon"
     },
