--- a/packages/chess/frontend/package.json
+++ b/packages/chess/frontend/package.json
@@ -21,7 +21,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-use": "^17.4.0",
-        "react-router-dom": "^6.27.0",
+        "react-router": "^7.5.0",
         "react-icons": "^5.5.0",
         "@radix-ui/react-toast": "^1.1.4",
         "@radix-ui/react-toggle": "^1.0.3",
