--- a/packages/file-share/frontend/package.json
+++ b/packages/file-share/frontend/package.json
@@ -20,7 +20,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-use": "^17.4.0",
-        "react-router-dom": "^6.27.0",
+        "react-router": "^7.5.0",
         "fast-diff": "^1.3.0",
         "react-icons": "^5.5.0",
         "@radix-ui/react-toast": "^1.1.4",
