--- a/packages/live-streaming/frontend/package.json
+++ b/packages/live-streaming/frontend/package.json
@@ -33,7 +33,7 @@
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-tooltip": "^1.1.8",
         "@radix-ui/react-toast": "^1.2.6",
-        "react-router-dom": "^6.27.0",
+        "react-router": "^7.5.0",
         "p-queue": "^8.0.1"
     },
     "devDependencies": {
