--- a/packages/one-chat-room/frontend/package.json
+++ b/packages/one-chat-room/frontend/package.json
@@ -23,8 +23,8 @@
         "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
         "@mui/material": "^5.15.7",
-        "react-router-dom": "^6.27.0",
-        "@mui/icons-material": "^5.15.7"
+        "react-router": "^7.5.0",
+        "@mui/icons-material": "^7.0.2"
     },
     "devDependencies": {
         "@types/react": "^18.2.46",
