--- a/packages/social-media-app/app-sdk/package.json
+++ b/packages/social-media-app/app-sdk/package.json
@@ -30,7 +30,7 @@
         "peerbit": "^4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.27.0",
+        "react-router": "^7.5.0",
         "react-use": "^17.4.0"
     },
     "scripts": {
