--- a/packages/social-media-app/frontend/package.json
+++ b/packages/social-media-app/frontend/package.json
@@ -32,7 +32,7 @@
         "react-grid-layout-next": "^2.2.0",
         "react-icons": "^5.5.0",
         "react-markdown": "^10.1.0",
-        "react-router-dom": "^6.27.0",
+        "react-router": "^7.5.0",
         "react-use": "^17.4.0",
         "remark-gfm": "^4.0.1"
     },
