--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,25 +24,8 @@ jobs:
 
     - name: Build every frontend with the commit hash
       run: |
-        yarn install
-        SHORT_SHA=$(echo $COMMIT_HASH | cut -c1-7)
-
-        # --- Build each package -----------------
-        for PKG in \
-          packages/live-streaming/frontend \
-          packages/one-chat-room/frontend \
-          packages/social-media-app/frontend \
-          packages/collaborative-learning/frontend \
-          packages/text-document/frontend \
-          packages/file-share/frontend \
-          packages/chess/frontend
-        do
-          echo "Building $PKG with commit $SHORT_SHA"
-          (cd $PKG && \
-            VITE_COMMIT_HASH=$SHORT_SHA \
-            REACT_APP_COMMIT_HASH=$SHORT_SHA \
-            yarn build)
-        done
+        yarn install && 
+        SHORT_SHA=$(echo $COMMIT_HASH | cut -c1-7) yarn build
 
     - name: Deploy stream
       run: |
