--- a/packages/media-streaming/playback-utils/package.json
+++ b/packages/media-streaming/playback-utils/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@peerbit/media-streaming-web",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "author": "dao.xyz",
     "repository": "https://github.com/@dao-xyz/peerbit-examples",
     "license": "Apache-2.0",
@@ -44,8 +44,8 @@
     },
     "dependencies": {
         "@peerbit/document": "^9",
+        "@peerbit/media-streaming": "^0.0.2",
         "peerbit": "^4",
-        "uuid": "^10.0.0",
-        "@peerbit/media-streaming": "^0.0.1"
+        "uuid": "^10.0.0"
     }
 }
