--- a/packages/social-media-app/frontend/package.json
+++ b/packages/social-media-app/frontend/package.json
@@ -22,6 +22,7 @@
         "@peerbit/react": "*",
         "@radix-ui/react-toggle": "^1.0.3",
         "@radix-ui/react-toggle-group": "^1.0.3",
+        "@radix-ui/react-radio-group": "^1.3.7",
         "axios": "^1.4.0",
         "lodash.debounce": "^4.0.8",
         "lodash.throttle": "^4.1.1",
@@ -35,7 +36,8 @@
         "react-markdown": "^10.1.0",
         "react-router": "^7.5.0",
         "react-use": "^17.4.0",
-        "remark-gfm": "^4.0.1"
+        "remark-gfm": "^4.0.1",
+        "react-color": "^2.19.3"
     },
     "devDependencies": {
         "@peerbit/vite": "^1",
@@ -46,6 +48,7 @@
         "@types/react": "^18.2.46",
         "@types/react-dom": "^18.2.18",
         "@vitejs/plugin-react": "^4",
+        "@types/react-color": "^3.0.13",
         "autoprefixer": "^10.4.20",
         "tailwindcss": "^4.0.14",
         "typescript": "^5.6.3",
