--- a/packages/social-media-app/ai/cli/package.json
+++ b/packages/social-media-app/ai/cli/package.json
@@ -13,7 +13,7 @@
         "import": "./lib/esm/index.js"
     },
     "bin": {
-        "videoseed": "./lib/esm/bin.js"
+        "giga-app-llm": "./lib/esm/bin.js"
     },
     "files": [
         "lib",
