--- a/packages/social-media-app/frontend/package.json
+++ b/packages/social-media-app/frontend/package.json
@@ -14,6 +14,7 @@
         "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist"
     },
     "dependencies": {
+        "framer-motion": "^12.23.3",
         "@giga-app/interface": "^0",
         "@giga-app/app-service": "^0",
         "@giga-app/sdk": "^0",
