--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -7,6 +7,7 @@
     "types": "lib/esm/index.d.ts",
     "exports": {
         ".": {
+            "types": "./lib/esm/index.d.ts",
             "import": "./lib/esm/index.js"
         },
         "./package.json": "./package.json"
