--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     ],
     "compilerOptions": {
         "target": "ES2022",
-        "module": "ES2022",
+        "module": "es2022",
         "lib": ["Es2022", "DOM"],
         "moduleResolution": "node",
         "strict": true,
