--- a/packages/social-media-app/frontend/package.json
+++ b/packages/social-media-app/frontend/package.json
@@ -6,12 +6,16 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
+        "dev:debug": "VITE_DEBUG=true vite",
         "start": "vite",
         "start-https": "vite",
         "start-remote": "vite --mode staging --config vite.config.remote.ts",
         "build": "tsc && vite build",
         "preview": "vite preview",
-        "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist"
+        "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist",
+        "test:e2e": "playwright test",
+        "test:e2e:headed": "playwright test --headed",
+        "test:e2e:ui": "playwright test --ui"
     },
     "dependencies": {
         "framer-motion": "^12.23.3",
@@ -53,7 +57,8 @@
         "autoprefixer": "^10.4.20",
         "tailwindcss": "^4.0.14",
         "typescript": "^5.6.3",
-        "vite": "^7.1.3"
+        "vite": "^7.1.3",
+        "@playwright/test": "^1.47.0"
     },
     "browserslist": {
         "production": [
