--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -50,7 +50,7 @@
     "scripts": {
         "clean": "shx rm -rf lib/*",
         "build": "yarn clean && tsc -p tsconfig.json",
-        "test": "mocha"
+        "test": "yarn build && mocha \"lib/esm/**/__tests__/*.js\""
     },
     "eslintConfig": {
         "extends": [
