--- a/package.json
+++ b/package.json
@@ -16,7 +16,15 @@
             "**/babel-loader",
             "**/babel-loader/**",
             "**/webpack",
-            "**/webpack/**"
+            "**/webpack/**",
+            "**/svelte-example/**/vite",
+            "**/svelte-example/**/vite/**",
+            "**/svelte-example/**/vitest",
+            "**/svelte-example/**/vitest/**",
+            "**/svelte-example/**/@sveltejs/*",
+            "**/svelte-example/**/@sveltejs/*/**",
+            "**/svelte-example/**/svelte",
+            "**/svelte-example/**/svelte/**"
         ]
     },
     "engines": {
@@ -30,12 +38,17 @@
         "build": "lerna run build --reject-cycles",
         "build-node": "cd ./packages/node/ && yarn build",
         "pub": "lerna publish --no-private",
-        "test": "lerna run test",
+        "test": "yarn build && vitest run",
+        "test:vitest": "yarn build && vitest run",
+        "test:vitest:watch": "vitest",
+        "test:vitest:quick": "vitest run",
+        "vitest": "vitest",
         "fmt": "prettier --write '{*,**/*}.{js,ts,jsx,tsx,json,vue}'",
         "lint": "eslint --ext .ts . && prettier --check '{*,**/*}.{js,ts,jsx,tsx,json,vue}'",
         "lint:fix": "eslint --fix --ext .ts . && yarn fmt",
         "nuke": "shx rm -rf {.,packages/*/*}/{node_modules,yarn.lock}",
-        "postinstall": "patch-package && mkdir -p node_modules/chai-extend && cp chai-global.js node_modules/chai-extend/chai-global.js && echo '{\"type\": \"module\"}' > node_modules/chai-extend/package.json"
+        "postinstall": "patch-package && mkdir -p node_modules/chai-extend && cp chai-global.js node_modules/chai-extend/chai-global.js && echo '{\"type\": \"module\"}' > node_modules/chai-extend/package.json",
+        "e2e:placeholderDelay": "yarn workspace @giga-app/interface build && cd packages/social-media-app/frontend && npx playwright test tests/placeholderDelay.spec.ts --reporter=line --timeout=70000"
     },
     "devDependencies": {
         "@types/eslint": "^8.40.2",
@@ -62,6 +75,7 @@
         "typescript-esm": "^2.0.0",
         "json": "^11.0.0",
         "rollup-plugin-copy": "^3.5.0",
-        "patch-package": "^8"
+        "patch-package": "^8",
+        "vitest": "^3.2.4"
     }
 }
