--- a/packages/blog-platform/server/package.json
+++ b/packages/blog-platform/server/package.json
@@ -25,7 +25,8 @@
         "clean": "shx rm -rf lib/*",
         "build": "yarn clean && tsc -p tsconfig.json",
         "start": "ts-node --esm ./src/bin.ts",
-        "test": "mocha",
+        "test": "vitest run",
+        "test:watch": "vitest",
         "watch": "nodemon"
     },
     "devDependencies": {
