--- a/packages/media-streaming/music-library/frontend/package.json
+++ b/packages/media-streaming/music-library/frontend/package.json
@@ -11,7 +11,8 @@
         "build": "tsc && vite build",
         "preview": "vite preview",
         "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist",
-        "test": "mocha"
+        "test": "vitest run",
+        "test:watch": "vitest"
     },
     "browser": {
         "./src/hrtime.js": "./src/hrtime.browser.js"
