--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -50,7 +50,8 @@
     "scripts": {
         "clean": "shx rm -rf lib/*",
         "build": "yarn clean && tsc -p tsconfig.json",
-        "test": "yarn build && mocha \"lib/esm/**/__tests__/*.js\""
+        "test": "vitest run",
+        "test:watch": "vitest"
     },
     "eslintConfig": {
         "extends": [
