--- a/packages/social-media-app/app-service/package.json
+++ b/packages/social-media-app/app-service/package.json
@@ -28,7 +28,8 @@
     "scripts": {
         "clean": "shx rm -rf lib/*",
         "build": "yarn clean && tsc -p tsconfig.json",
-        "test": "mocha"
+        "test": "vitest run",
+        "test:watch": "vitest"
     },
     "devDependencies": {
         "@giga-app/interface": "^0.0.21",
