--- a/package.json
+++ b/package.json
@@ -48,34 +48,36 @@
         "lint:fix": "eslint --fix --ext .ts . && yarn fmt",
         "nuke": "shx rm -rf {.,packages/*/*}/{node_modules,yarn.lock}",
         "postinstall": "patch-package && mkdir -p node_modules/chai-extend && cp chai-global.js node_modules/chai-extend/chai-global.js && echo '{\"type\": \"module\"}' > node_modules/chai-extend/package.json",
-        "e2e:placeholderDelay": "yarn workspace @giga-app/interface build && cd packages/social-media-app/frontend && npx playwright test tests/placeholderDelay.spec.ts --reporter=line --timeout=70000"
+        "e2e:placeholderDelay": "yarn workspace @giga-app/interface build && cd packages/social-media-app/frontend && npx playwright test tests/placeholderDelay.spec.ts --reporter=line --timeout=70000",
+        "test:frontend:unit": "vitest run -c packages/social-media-app/frontend/vitest.config.ts"
     },
     "devDependencies": {
+        "@types/chai": "^4.3.18",
+        "@types/chai-as-promised": "^8",
         "@types/eslint": "^8.40.2",
         "@types/eslint-plugin-prettier": "^3.1.0",
+        "@types/mocha": "^10.0.7",
         "@types/node": "^17.0.32",
         "@types/prettier": "^2.4.2",
-        "@types/chai": "^4.3.18",
-        "chai": "^5.1.1",
-        "chai-as-promised": "^8",
-        "@types/chai-as-promised": "^8",
-        "eslint": "^8.27.0",
-        "@types/mocha": "^10.0.7",
-        "mocha": "^10.7.0",
         "@typescript-eslint/eslint-plugin": "^6.16.0",
         "@typescript-eslint/parser": "^6.16.0",
+        "chai": "^5.1.1",
+        "chai-as-promised": "^8",
+        "eslint": "^8.27.0",
         "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-prettier": "^4.2.1",
         "eslint-config-react-app": "^7.0.1",
-        "prettier": "^2.7.1",
+        "eslint-plugin-prettier": "^4.2.1",
+        "jsdom": "^26.1.0",
+        "json": "^11.0.0",
         "lerna": "8.2.4",
+        "mocha": "^10.7.0",
+        "patch-package": "^8",
+        "prettier": "^2.7.1",
+        "rollup-plugin-copy": "^3.5.0",
         "shx": "^0.3.4",
         "ts-node": "^10.9.1",
         "typescript": "^5.6.3",
         "typescript-esm": "^2.0.0",
-        "json": "^11.0.0",
-        "rollup-plugin-copy": "^3.5.0",
-        "patch-package": "^8",
         "vitest": "^3.2.4"
     }
 }
