--- a/packages/social-media-app/frontend/package.json
+++ b/packages/social-media-app/frontend/package.json
@@ -13,9 +13,13 @@
         "build": "tsc && vite build",
         "preview": "vite preview",
         "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist",
+        "pretest:e2e": "yarn workspace @giga-app/interface build",
         "test:e2e": "playwright test",
+        "pretest:e2e:headed": "yarn workspace @giga-app/interface build",
         "test:e2e:headed": "playwright test --headed",
-        "test:e2e:ui": "playwright test --ui"
+        "pretest:e2e:ui": "yarn workspace @giga-app/interface build",
+        "test:e2e:ui": "playwright test --ui",
+        "test:unit": "vitest run"
     },
     "dependencies": {
         "framer-motion": "^12.23.3",
