--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "compilerOptions": {
         "target": "ES2022",
         "module": "es2022",
-        "lib": ["Es2022", "DOM"],
+        "lib": ["ES2022", "DOM", "DOM.Iterable"],
         "moduleResolution": "node",
         "strict": true,
         "strictPropertyInitialization": false,
