--- a/packages/social-media-app/frontend/tsconfig.json
+++ b/packages/social-media-app/frontend/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "es2022",
         "useDefineForClassFields": true,
-        "lib": ["DOM", "DOM.Iterable", "Es2022"],
+        "lib": ["DOM", "DOM.Iterable", "ES2022"],
         "allowJs": false,
         "skipLibCheck": true,
         "esModuleInterop": false,
