--- a/package.json
+++ b/package.json
@@ -49,16 +49,20 @@
         "nuke": "shx rm -rf {.,packages/*/*}/{node_modules,yarn.lock}",
         "postinstall": "patch-package && mkdir -p node_modules/chai-extend && cp chai-global.js node_modules/chai-extend/chai-global.js && echo '{\"type\": \"module\"}' > node_modules/chai-extend/package.json",
         "e2e:placeholderDelay": "yarn workspace @giga-app/interface build && cd packages/social-media-app/frontend && npx playwright test tests/placeholderDelay.spec.ts --reporter=line --timeout=70000",
-        "test:frontend:unit": "vitest run -c packages/social-media-app/frontend/vitest.config.ts"
+        "test:frontend:unit": "vitest run -c packages/social-media-app/frontend/vitest.config.ts",
+        "prefetch:update": "yarn workspace @giga-app/interface-frontend prefetch:update"
     },
     "devDependencies": {
+        "@testing-library/dom": "10.4.1",
+        "@testing-library/react": "16.3.0",
         "@types/chai": "^4.3.18",
         "@types/chai-as-promised": "^8",
         "@types/eslint": "^8.40.2",
         "@types/eslint-plugin-prettier": "^3.1.0",
         "@types/mocha": "^10.0.7",
-        "@types/node": "^17.0.32",
+        "@types/node": "^20.5.19",
         "@types/prettier": "^2.4.2",
+        "@types/react-test-renderer": "19",
         "@typescript-eslint/eslint-plugin": "^6.16.0",
         "@typescript-eslint/parser": "^6.16.0",
         "chai": "^5.1.1",
@@ -67,13 +71,13 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-config-react-app": "^7.0.1",
         "eslint-plugin-prettier": "^4.2.1",
-        "jsdom": "^26.1.0",
+        "jsdom": "^27.0.0",
+        "happy-dom": "^18.0.1",
         "json": "^11.0.0",
         "lerna": "8.2.4",
         "mocha": "^10.7.0",
         "patch-package": "^8",
-        "prettier": "^2.7.1",
-        "rollup-plugin-copy": "^3.5.0",
+        "prettier": "^3.6.2",
         "shx": "^0.3.4",
         "ts-node": "^10.9.1",
         "typescript": "^5.6.3",
