--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -51,6 +51,8 @@
         "clean": "shx rm -rf lib/*",
         "build": "yarn clean && tsc -p tsconfig.json",
         "test": "vitest run",
+        "test:node": "vitest run --project node",
+        "test:dom": "vitest run --project jsdom",
         "test:watch": "vitest"
     },
     "eslintConfig": {
