--- a/packages/social-media-app/frontend/package.json
+++ b/packages/social-media-app/frontend/package.json
@@ -10,7 +10,8 @@
         "start": "vite",
         "start-https": "vite",
         "start-remote": "vite --mode staging --config vite.config.remote.ts",
-        "build": "tsc && vite build",
+        "prefetch:update": "tsx --tsconfig tsconfig.scripts.json scripts/update-prefetch.ts",
+        "build": "tsc && npm run prefetch:update && vite build",
         "preview": "vite preview",
         "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist",
         "pretest:e2e": "yarn workspace @giga-app/interface build",
@@ -62,6 +63,7 @@
         "tailwindcss": "^4.0.14",
         "typescript": "^5.6.3",
         "vite": "^7.1.3",
+        "tsx": "^4.19.2",
         "@playwright/test": "^1.55.0"
     },
     "browserslist": {
