--- a/package.json
+++ b/package.json
@@ -34,23 +34,23 @@
         "access": "public"
     },
     "scripts": {
-        "clean": "lerna run clean",
-        "build": "lerna run build --reject-cycles",
-        "build-node": "cd ./packages/node/ && yarn build",
-        "pub": "lerna publish --no-private",
-        "test": "yarn build && vitest run",
-        "test:vitest": "yarn build && vitest run",
+        "clean": "pnpm -r run clean",
+        "build": "pnpm -r --sort --workspace-concurrency=1 run build",
+        "build-node": "if [ -d ./packages/node ]; then (cd ./packages/node && pnpm run build); else echo \"packages/node not present\"; fi",
+        "pub": "pnpm -r publish --access public",
+        "test": "pnpm run build && vitest run",
+        "test:vitest": "pnpm run build && vitest run",
         "test:vitest:watch": "vitest",
         "test:vitest:quick": "vitest run",
         "vitest": "vitest",
         "fmt": "prettier --write '{*,**/*}.{js,ts,jsx,tsx,json,vue}'",
         "lint": "eslint --ext .ts . && prettier --check '{*,**/*}.{js,ts,jsx,tsx,json,vue}'",
-        "lint:fix": "eslint --fix --ext .ts . && yarn fmt",
+        "lint:fix": "eslint --fix --ext .ts . && pnpm run fmt",
         "nuke": "shx rm -rf {.,packages/*/*}/{node_modules,yarn.lock}",
         "postinstall": "patch-package && mkdir -p node_modules/chai-extend && cp chai-global.js node_modules/chai-extend/chai-global.js && echo '{\"type\": \"module\"}' > node_modules/chai-extend/package.json",
-        "e2e:placeholderDelay": "yarn workspace @giga-app/interface build && cd packages/social-media-app/frontend && npx playwright test tests/placeholderDelay.spec.ts --reporter=line --timeout=70000",
+        "e2e:placeholderDelay": "pnpm --filter @giga-app/interface run build && cd packages/social-media-app/frontend && npx playwright test tests/placeholderDelay.spec.ts --reporter=line --timeout=70000",
         "test:frontend:unit": "vitest run -c packages/social-media-app/frontend/vitest.config.ts",
-        "prefetch:update": "yarn workspace @giga-app/interface-frontend prefetch:update"
+        "prefetch:update": "pnpm --filter @giga-app/interface-frontend run prefetch:update"
     },
     "devDependencies": {
         "@testing-library/dom": "10.4.1",
@@ -74,7 +74,6 @@
         "jsdom": "^27.0.0",
         "happy-dom": "^18.0.1",
         "json": "^11.0.0",
-        "lerna": "8.2.4",
         "mocha": "^10.7.0",
         "patch-package": "^8",
         "prettier": "^3.6.2",
@@ -83,5 +82,6 @@
         "typescript": "^5.6.3",
         "typescript-esm": "^2.0.0",
         "vitest": "^3.2.4"
-    }
+    },
+    "packageManager": "pnpm@10.17.1"
 }
