--- a/packages/social-media-app/frontend/package.json
+++ b/packages/social-media-app/frontend/package.json
@@ -14,20 +14,21 @@
         "build": "tsc && npm run prefetch:update && vite build",
         "build:test": "tsc --project tsconfig.test.json && vite build",
         "preview": "vite preview",
-        "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist",
-        "pretest:e2e": "yarn workspace @giga-app/interface build",
+        "deploy": "pnpm run build && NODE_DEBUG=gh-pages gh-pages -d dist",
+        "pretest:e2e": "pnpm --filter @giga-app/interface run build",
         "test:e2e": "playwright test",
-        "pretest:e2e:headed": "yarn workspace @giga-app/interface build",
+        "pretest:e2e:headed": "pnpm --filter @giga-app/interface run build",
         "test:e2e:headed": "playwright test --headed",
-        "pretest:e2e:ui": "yarn workspace @giga-app/interface build",
+        "pretest:e2e:ui": "pnpm --filter @giga-app/interface run build",
         "test:e2e:ui": "playwright test --ui",
         "test:unit": "vitest run"
     },
     "dependencies": {
-        "framer-motion": "^12.23.3",
         "@giga-app/interface": "^0",
         "@giga-app/app-service": "^0",
+        "@giga-app/llm": "^0",
         "@giga-app/sdk": "^0",
+        "framer-motion": "^12.23.3",
         "@headlessui/react": "^2.2.0",
         "@peerbit/peer-names": "^0.0.1",
         "@peerbit/react": "*",
