--- a/packages/blog-platform/server/package.json
+++ b/packages/blog-platform/server/package.json
@@ -23,7 +23,7 @@
     },
     "scripts": {
         "clean": "shx rm -rf lib/*",
-        "build": "yarn clean && tsc -p tsconfig.json",
+        "build": "pnpm run clean && tsc -p tsconfig.json",
         "start": "ts-node --esm ./src/bin.ts",
         "test": "vitest run",
         "test:watch": "vitest",
