--- a/packages/collaborative-learning/frontend/package.json
+++ b/packages/collaborative-learning/frontend/package.json
@@ -10,7 +10,7 @@
         "start-remote": "vite --mode staging",
         "build": "tsc && vite build",
         "preview": "vite preview",
-        "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist"
+        "deploy": "pnpm run build && NODE_DEBUG=gh-pages gh-pages -d dist"
     },
     "dependencies": {
         "peerbit": "^4",
