--- a/packages/media-streaming/music-library/frontend/package.json
+++ b/packages/media-streaming/music-library/frontend/package.json
@@ -10,7 +10,7 @@
         "start-remote": "vite --mode staging --config vite.config.remote.ts",
         "build": "tsc && vite build",
         "preview": "vite preview",
-        "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist",
+        "deploy": "pnpm run build && NODE_DEBUG=gh-pages gh-pages -d dist",
         "test": "vitest run",
         "test:watch": "vitest"
     },
