--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -49,7 +49,7 @@
     },
     "scripts": {
         "clean": "shx rm -rf lib/*",
-        "build": "yarn clean && tsc -p tsconfig.json",
+        "build": "pnpm run clean && tsc -p tsconfig.json",
         "test": "vitest run",
         "test:node": "vitest run --project node",
         "test:dom": "vitest run --project happy-dom",
