--- a/packages/text-document/frontend/package.json
+++ b/packages/text-document/frontend/package.json
@@ -11,7 +11,7 @@
         "start-remote": "vite --mode staging --config vite.config.remote.ts",
         "build": "tsc && vite build",
         "preview": "vite preview",
-        "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist"
+        "deploy": "pnpm run build && NODE_DEBUG=gh-pages gh-pages -d dist"
     },
     "dependencies": {
         "@peerbit/string": "^5",
