--- a/packages/many-chat-rooms/frontend/package.json
+++ b/packages/many-chat-rooms/frontend/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "peerbit": "^4",
         "@peerbit/document": "^10",
+        "@peerbit/peer-names": "^0.0.1",
         "@peerbit/example-many-chat-rooms": "^0",
         "@peerbit/react": "*",
         "react": "^19.1.0",
