--- a/packages/social-media-app/ai/cli/package.json
+++ b/packages/social-media-app/ai/cli/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@peerbit/llm-service-cli",
-    "version": "0.0.30",
+    "version": "0.0.31",
     "author": "dao.xyz",
     "repository": "https://github.com/@dao-xyz/peerbit-examples",
     "license": "Apache-2.0",
@@ -40,7 +40,8 @@
         "typescript": "^5.6.3"
     },
     "dependencies": {
-        "@giga-app/llm": "^0.0.30",
+        "@giga-app/interface": "^0.0.25",
+        "@giga-app/llm": "^0.0.31",
         "@inquirer/editor": "^2",
         "@inquirer/input": "^2",
         "@inquirer/select": "^2"
