--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: pnpm
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.17.1
+          run_install: false
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -24,8 +36,8 @@ jobs:
 
       - name: Build every frontend with the commit hash
         run: |
-          yarn install
-          SHORT_SHA=$(echo $COMMIT_HASH | cut -c1-7) yarn build
+          pnpm install --frozen-lockfile
+          SHORT_SHA=$(echo $COMMIT_HASH | cut -c1-7) pnpm run build
 
       - name: Deploy stream
         run: |
