--- a/packages/svelte-example/tsconfig.json
+++ b/packages/svelte-example/tsconfig.json
@@ -10,7 +10,7 @@
         "sourceMap": true,
         "strict": true,
         "module": "ES2022",
-        "moduleResolution": "bundler",
+        "moduleResolution": "bundler"
         // peerbit related
     }
     // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
