--- a/packages/media-streaming/video-streaming/frontend/package.json
+++ b/packages/media-streaming/video-streaming/frontend/package.json
@@ -19,10 +19,11 @@
     },
     "dependencies": {
         "@giga-app/sdk": "^0",
-        "@peerbit/document": "^11.0.0",
+        "@peerbit/document": "^11.1.0",
+        "@peerbit/document-react": "^0",
         "@peerbit/media-streaming": "workspace:*",
         "@peerbit/media-streaming-web": "workspace:*",
-        "@peerbit/react": "^0.0.38",
+        "@peerbit/react": "^0",
         "@radix-ui/react-dialog": "^1.1.2",
         "@radix-ui/react-dropdown-menu": "2.1.6",
         "@radix-ui/react-icons": "^1.3.0",
@@ -36,8 +37,7 @@
         "react-dom": "^19.1.0",
         "react-icons": "^5.5.0",
         "react-router": "^7.9.3",
-        "react-use": "^17.6.0",
-        "@peerbit/document-react": "^0.2.0"
+        "react-use": "^17.6.0"
     },
     "devDependencies": {
         "@peerbit/vite": "^1.1.0",
