--- a/packages/one-chat-room/frontend/tsconfig.json
+++ b/packages/one-chat-room/frontend/tsconfig.json
@@ -1,7 +1,11 @@
 {
     "compilerOptions": {
         "target": "es2022",
-        "lib": ["DOM", "DOM.Iterable", "Es2022"],
+        "lib": [
+            "DOM",
+            "DOM.Iterable",
+            "Es2022"
+        ],
         "allowJs": false,
         "skipLibCheck": true,
         "esModuleInterop": false,
@@ -15,8 +19,12 @@
         "noEmit": true,
         "jsx": "react-jsx"
     },
-    "include": ["src"],
-    "exclude": ["src/__tests__"],
+    "include": [
+        "src"
+    ],
+    "exclude": [
+        "src/__tests__"
+    ],
     "references": [
         {
             "path": "./tsconfig.node.json"
