--- a/packages/text-document/frontend/tsconfig.json
+++ b/packages/text-document/frontend/tsconfig.json
@@ -1,8 +1,11 @@
 {
     "compilerOptions": {
         "target": "es2022",
-        "useDefineForClassFields": true,
-        "lib": ["DOM", "DOM.Iterable", "Es2022"],
+        "lib": [
+            "DOM",
+            "DOM.Iterable",
+            "Es2022"
+        ],
         "allowJs": false,
         "skipLibCheck": true,
         "esModuleInterop": false,
@@ -16,7 +19,9 @@
         "noEmit": true,
         "jsx": "react-jsx"
     },
-    "include": ["src"],
+    "include": [
+        "src"
+    ],
     "references": [
         {
             "path": "./tsconfig.node.json"
