fix: bump peerbit

--- a/packages/social-media-app/frontend/package.json
+++ b/packages/social-media-app/frontend/package.json
@@ -42,7 +42,7 @@
         "lodash.throttle": "^4.1.1",
         "mdast-util-from-markdown": "^2.0.2",
         "mdast-util-to-string": "^4.0.0",
-        "peerbit": "^4.4.2",
+        "peerbit": "^4",
         "react": "^19.2.0",
         "react-color": "^2.19.3",
         "react-dom": "^19.1.0",
@@ -55,7 +55,7 @@
     },
     "devDependencies": {
         "@peerbit/vite": "^1.1.0",
-        "@playwright/test": "^1.55.0",
+        "@playwright/test": "^1.57.0",
         "@tailwindcss/vite": "^4.0.14",
         "@types/lodash": "^4.17.16",
         "@types/lodash.debounce": "^4.0.9",
@@ -63,6 +63,7 @@
         "@types/react": "^19.1.8",
         "@types/react-color": "^3.0.13",
         "@types/react-dom": "^19.1.6",
+        "@vitejs/plugin-basic-ssl": "^2.1.0",
         "@vitejs/plugin-react": "^5",
         "autoprefixer": "^10.4.20",
         "tailwindcss": "^4.0.14",
