--- a/packages/one-chat-room/frontend/tsconfig.json
+++ b/packages/one-chat-room/frontend/tsconfig.json
@@ -1,11 +1,7 @@
 {
     "compilerOptions": {
         "target": "es2022",
-        "lib": [
-            "DOM",
-            "DOM.Iterable",
-            "Es2022"
-        ],
+        "lib": ["DOM", "DOM.Iterable", "Es2022"],
         "allowJs": false,
         "skipLibCheck": true,
         "esModuleInterop": false,
@@ -19,12 +15,8 @@
         "noEmit": true,
         "jsx": "react-jsx"
     },
-    "include": [
-        "src"
-    ],
-    "exclude": [
-        "src/__tests__"
-    ],
+    "include": ["src"],
+    "exclude": ["src/__tests__"],
     "references": [
         {
             "path": "./tsconfig.node.json"
