--- a/packages/social-media-app/frontend/package.json
+++ b/packages/social-media-app/frontend/package.json
@@ -51,7 +51,8 @@
         "react-markdown": "^10.1.0",
         "react-router": "^7.9.3",
         "react-use": "^17.6.0",
-        "remark-gfm": "^4.0.1"
+        "remark-gfm": "^4.0.1",
+        "uint8arrays": "^5.1.0"
     },
     "devDependencies": {
         "@peerbit/vite": "^1.1.0",
