--- a/packages/chess/frontend/package.json
+++ b/packages/chess/frontend/package.json
@@ -13,7 +13,7 @@
         "deploy": "pnpm run build && NODE_DEBUG=gh-pages gh-pages -d dist"
     },
     "dependencies": {
-        "@giga-app/sdk": "^1.0.0",
+        "@giga-app/sdk": "workspace:*",
         "@peerbit/react": "^0",
         "@radix-ui/react-popover": "^1.0.7",
         "@radix-ui/react-progress": "^1.0.3",
