--- a/packages/many-chat-rooms/frontend/package.json
+++ b/packages/many-chat-rooms/frontend/package.json
@@ -18,8 +18,8 @@
         "@mui/icons-material": "^7.0.2",
         "@mui/material": "^5.15.7",
         "@peerbit/document": "^11",
-        "@peerbit/example-many-chat-rooms": "workspace:^",
-        "@peerbit/peer-names": "workspace:^",
+        "@peerbit/example-many-chat-rooms": "workspace:*",
+        "@peerbit/peer-names": "workspace:*",
         "@peerbit/react": "^0",
         "peerbit": "^4",
         "react": "^19.2.0",
