--- a/packages/file-share/cli/package.json
+++ b/packages/file-share/cli/package.json
@@ -39,7 +39,7 @@
         "typescript": "^5.6.3"
     },
     "dependencies": {
-        "@peerbit/please-lib": "workspace:^",
+        "@peerbit/please-lib": "workspace:*",
         "chalk": "^5.3.0",
         "peerbit": "^4",
         "yargs": "^17.7.2"
