--- a/packages/media-streaming/video-streaming/cli/package.json
+++ b/packages/media-streaming/video-streaming/cli/package.json
@@ -43,6 +43,6 @@
         "@inquirer/editor": "^2",
         "@inquirer/input": "^2",
         "@inquirer/select": "^2",
-        "@peerbit/media-streaming": "workspace:^"
+        "@peerbit/media-streaming": "workspace:*"
     }
 }
