--- a/packages/social-media-app/ai/cli/package.json
+++ b/packages/social-media-app/ai/cli/package.json
@@ -40,8 +40,8 @@
         "typescript": "^5.6.3"
     },
     "dependencies": {
-        "@giga-app/interface": "^1.0.0",
-        "@giga-app/llm": "^1.0.0",
+        "@giga-app/interface": "workspace:*",
+        "@giga-app/llm": "workspace:*",
         "@inquirer/editor": "^2",
         "@inquirer/input": "^2",
         "@inquirer/select": "^2"
