--- a/packages/social-media-app/frontend/package.json
+++ b/packages/social-media-app/frontend/package.json
@@ -24,13 +24,13 @@
         "test:unit": "vitest run"
     },
     "dependencies": {
-        "@giga-app/app-service": "^1.0.0",
-        "@giga-app/interface": "^1.0.0",
-        "@giga-app/llm": "^1.0.0",
-        "@giga-app/sdk": "^1.0.0",
+        "@giga-app/app-service": "workspace:*",
+        "@giga-app/interface": "workspace:*",
+        "@giga-app/llm": "workspace:*",
+        "@giga-app/sdk": "workspace:*",
         "@headlessui/react": "^2.2.0",
         "@peerbit/document-react": "^0",
-        "@peerbit/peer-names": "workspace:^",
+        "@peerbit/peer-names": "workspace:*",
         "@peerbit/program-react": "^0.2.0",
         "@peerbit/react": "^0",
         "@radix-ui/react-radio-group": "^1.3.7",
