fix: changset version

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
         "build-node": "if [ -d ./packages/node ]; then (cd ./packages/node && pnpm run build); else echo \"packages/node not present\"; fi",
         "pub": "pnpm changeset publish",
         "version-packages": "pnpm changeset version",
-        "changeset": "pnpm exec changeset",
+        "changeset": "changeset",
+        "changeset:version": "changeset version",
+        "changeset:publish": "changeset publish",
         "test": "pnpm run build && vitest run",
         "test:vitest": "pnpm run build && vitest run",
         "test:vitest:watch": "vitest",
