--- a/packages/social-media-app/frontend/package.json
+++ b/packages/social-media-app/frontend/package.json
@@ -10,7 +10,7 @@
         "start": "vite",
         "start-https": "vite",
         "start-remote": "vite --mode staging --config vite.config.remote.ts",
-        "prefetch:update": "tsx --tsconfig tsconfig.scripts.json scripts/update-prefetch.ts",
+        "prefetch:update": "pnpm --filter @giga-app/network run build && tsx --tsconfig tsconfig.scripts.json scripts/update-prefetch.ts",
         "build": "tsc && npm run prefetch:update && vite build",
         "build:test": "tsc --project tsconfig.test.json && vite build",
         "preview": "vite preview",
@@ -27,6 +27,7 @@
         "@giga-app/app-service": "workspace:*",
         "@giga-app/interface": "workspace:*",
         "@giga-app/llm": "workspace:*",
+        "@giga-app/network": "workspace:*",
         "@giga-app/sdk": "workspace:*",
         "@headlessui/react": "^2.2.0",
         "@peerbit/document-react": "^0",
