fix: peer, login by passing privateKey

--- a/packages/social-media-app/frontend/.env.example
+++ b/packages/social-media-app/frontend/.env.example
@@ -6,3 +6,8 @@
 VITE_SUPABASE_URL=
 VITE_SUPABASE_ANON_KEY=
 
+# Optional: E2E test credentials (used by Playwright auth tests)
+# TEST_EMAIL=
+# TEST_PASSWORD=
+TEST_EMAIL=
+TEST_PASSWORD=
