--- a/package.json
+++ b/package.json
@@ -56,6 +56,12 @@
         "test:frontend:unit": "vitest run -c packages/social-media-app/frontend/vitest.config.ts",
         "prefetch:update": "pnpm --filter @giga-app/interface-frontend run prefetch:update"
     },
+    "pnpm": {
+        "overrides": {
+            "libsodium": "0.7.15",
+            "libsodium-wrappers": "0.7.15"
+        }
+    },
     "devDependencies": {
         "@changesets/cli": "^2.29.7",
         "@testing-library/dom": "10.4.1",
