fix(frontend): render inline giga markdown images and stabilize UI
- Preserve `giga://image/...` src in react-markdown and normalize refs to hide duplicate standalone images
- Add Playwright e2e coverage for inline giga images (runs on free port / `PW_PORT`)
- Memoize `useQuery` options and patch Radix ref composition to avoid React 19 update loops
- Update interface library for new `CountEstimate` return type

--- a/packages/social-media-app/frontend/package.json
+++ b/packages/social-media-app/frontend/package.json
@@ -15,11 +15,11 @@
         "build:test": "tsc --project tsconfig.test.json && vite build",
         "preview": "vite preview",
         "deploy": "pnpm run build && NODE_DEBUG=gh-pages gh-pages -d dist",
-        "pretest:e2e": "pnpm --filter @giga-app/interface run build",
+        "pretest:e2e": "pnpm --filter @giga-app/interface run build && pnpm --filter @peerbit/identity-supabase run build",
         "test:e2e": "playwright test",
-        "pretest:e2e:headed": "pnpm --filter @giga-app/interface run build",
+        "pretest:e2e:headed": "pnpm --filter @giga-app/interface run build && pnpm --filter @peerbit/identity-supabase run build",
         "test:e2e:headed": "playwright test --headed",
-        "pretest:e2e:ui": "pnpm --filter @giga-app/interface run build",
+        "pretest:e2e:ui": "pnpm --filter @giga-app/interface run build && pnpm --filter @peerbit/identity-supabase run build",
         "test:e2e:ui": "playwright test --ui",
         "test:unit": "vitest run"
     },
